<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scollView"  android:fitsSystemWindows="true"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dip"
    android:scrollbarThumbVertical="@drawable/base_list_scrollbar_handle" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/notification_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/setting_item_bg_up"
            android:clickable="true" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="20dp"
                android:text="@string/notificaion_btn"
                android:textColor="@color/light_black" />

            <ImageView
                android:id="@+id/indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:background="@drawable/my_fast_open"
                android:contentDescription="@string/app_name" />
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/rlayout_halfauto_play"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/setting_item_bg_down"
            android:clickable="true" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="20dp"
                android:text="@string/settings_autoplay"
                android:textColor="@color/light_black" />

            <ImageView
                android:id="@+id/imgv_auto_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:background="@drawable/my_fast_open"
                android:contentDescription="@string/app_name" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlayout_auto_play"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/setting_item_bg_down"
            android:clickable="true" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="20dp"
                android:text="@string/settings_play"
                android:textColor="@color/light_black" />

            <ImageView
                android:id="@+id/imgv_play_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:background="@drawable/my_fast_open"
                android:contentDescription="@string/app_name" />
        </RelativeLayout>

        <TextView
            android:id="@+id/about"
            style="@style/my_text_style"
            android:layout_width="fill_parent"
            android:layout_height="44dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/setting_item_bg_up"
            android:text="@string/my_about" />

        <TextView
            android:id="@+id/help"
            style="@style/my_text_style"
            android:layout_width="fill_parent"
            android:layout_height="44dp"
            android:background="@drawable/setting_item_bg_down"
            android:text="@string/my_help" />

        <TextView
            android:id="@+id/new_version"
            style="@style/my_text_style"
            android:layout_width="fill_parent"
            android:layout_height="44dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/setting_item_bg_up"
            android:text="@string/my_newversion" />

        <TextView
            android:id="@+id/score"
            style="@style/my_text_style"
            android:layout_width="fill_parent"
            android:layout_height="44dp"
            android:background="@drawable/setting_item_bg_up"
            android:text="@string/my_score" />

        <TextView
            android:id="@+id/boxconfig"
            style="@style/my_text_style"
            android:layout_width="fill_parent"
            android:layout_height="44dp"
            android:background="@drawable/setting_item_bg_up"
            android:text="@string/boxconfig" />
        
        <TextView
            android:id="@+id/tv_clear"
            style="@style/my_text_style"
            android:layout_width="fill_parent"
            android:layout_height="44dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/setting_item_bg_down"
            android:text="@string/my_clear_cache" />
        
        <RelativeLayout
            android:id="@+id/tv_cache_path"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/setting_item_bg_down"
            android:clickable="true" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="20dp"
                android:text="@string/my_cache_path"
                android:textColor="@color/light_black" />

            <TextView
                android:id="@+id/cache_path_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textColor="@color/gray"
                android:layout_marginRight="10dp"/>
        </RelativeLayout>
    </LinearLayout>

</ScrollView>