<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/exchange_code"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="gone" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_exchange_code"
            android:textColor="@color/navigator_bg_color"
            android:textSize="@dimen/gift_receiver_text" />

        <TextView
            android:id="@+id/code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/use_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/use_desc"
        android:textSize="@dimen/gift_receiver_text" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/receiver_list"
            android:textSize="@dimen/gift_receiver_text" />

        <ImageView
            android:id="@+id/expand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/channel_indicator_up"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:visibility="gone" />
    </RelativeLayout>

    <com.sumavision.talktv2.components.StaticListView
        android:id="@+id/receiver_list"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="2dp" />

</LinearLayout>