<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pdn_c_login_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:background="@drawable/sendcomment_bg"
    android:visibility="visible" >

    <TextView
        android:id="@+id/pdn_c_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/notloginyet"
        android:textColor="#f35000"
        android:textSize="19sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pdn_c_login_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="3dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/pdn_c_login_btn"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:gravity="center"
            android:src="@drawable/send"
            android:text="@string/login"
            android:textSize="17sp" />

        <Button
            android:id="@+id/pdn_c_send_btn"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:gravity="center"
            android:src="@drawable/send"
            android:text="@string/nimingfasong"
            android:textSize="17sp" />
    </LinearLayout>

</RelativeLayout>